<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ip_address" />

    <TextView
        android:id="@+id/textView_IP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView_main"
        android:layout_below="@+id/textView_main"
        android:layout_marginTop="29dp"
        android:text="@string/textView_IP" />

    <TextView
        android:id="@+id/textView_port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView_IP"
        android:layout_below="@+id/editText_ipaddress"
        android:layout_marginTop="16dp"
        android:text="@string/textView_port" />

    <Button
        android:id="@+id/connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView_port"
        android:layout_below="@+id/editText_port"
        android:layout_marginTop="18dp"
        android:onClick="connectBtnListener"
        android:text="@string/button_connect" />

    <EditText
        android:id="@+id/editText_ipaddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView_IP"
        android:layout_alignLeft="@+id/editText_port"
        android:ems="10" 
        android:inputType="text" />

    <EditText
        android:id="@+id/editText_port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView_port"
        android:layout_toRightOf="@+id/textView_IP"
        android:ems="10"
        android:inputType="number" />

</RelativeLayout>