<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CommandActivity" >

    <Button
        android:id="@+id/button_fire"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editText_command"
        android:layout_toRightOf="@+id/editText_command"
        android:text="@string/button_fire" />

    <Button
        android:id="@+id/btnSE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnNW"
        android:layout_toLeftOf="@+id/btnNW"
        android:background="@drawable/circlebottomlefttrans"
        android:onClick="gamespaceClick"
        android:tag="se" />

    <Button
        android:id="@+id/btnSW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnNW"
        android:layout_below="@+id/btnNW"
        android:background="@drawable/circlebottomrighttrans"
        android:onClick="gamespaceClick"
        android:tag="sw" />

    <EditText
        android:id="@+id/editText_command"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/hintCommand" />

    <Button
        android:id="@+id/btnNW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnNE"
        android:layout_alignBottom="@+id/btnNE"
        android:layout_alignRight="@+id/btnHelp"
        android:background="@drawable/circletoprighttrans"
        android:onClick="gamespaceClick"
        android:tag="nw" />

    <Button
        android:id="@+id/btnNE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_command"
        android:layout_marginTop="64dp"
        android:layout_toLeftOf="@+id/btnSW"
        android:background="@drawable/circletoplefttrans"
        android:onClick="gamespaceClick"
        android:tag="ne" />

    <ImageButton
        android:id="@+id/btnHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnNE"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:background="@null"
        android:contentDescription="@string/helpDesc"
        android:onClick="helpClick"
        android:src="@drawable/question_mark_icon_small" />


    <ImageButton
        android:id="@+id/btnFF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editText_command"
        android:layout_alignLeft="@+id/btnNE"
        android:background="@null"
        android:src="@drawable/fast_forward_icon"
        android:contentDescription="@string/FFDesc"
        android:onClick="FFClick"
        android:tag="FF" />

</RelativeLayout>